# antheal

./: .gitignore  README.md
SDK/: CMakeLists.txt  sampleConfig.h.in
SDK/05HelloPathtracing/: CMakeLists.txt  CUDABuffer.h  Disney.cuh  LaunchParams.h  Material.h  Model.cpp  Model.h  OptixDenoiser.cpp  OptixDenoiser.h  Probe.cuh  Probe.h  SimplePathtracer.cpp  SimplePathtracer.h  deviceProgram.cu  main.cpp  maths.h  sample.h  toneMap.cu  toneMap.h
SDK/11HelloRaytracingOpenXR/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  OptiXRenderer.h  SampleRenderer.cpp  SampleRenderer.h  deviceProgram.cu  main.cpp
SDK/CMake/: FindCUDA.cmake  FindOpenEXR.cmake
SDK/CMake/FindCUDA/: run_nvcc.cmake
SDK/cuda/: GeometryData.h  LocalGeometry.h  MaterialData.h  curve.h  sphere.cu  whitted.cu  whitted.h  whitted_cuda.h
SDK/data/Hair/: README.TXT  woman.gltf
SDK/example01_openglOpenxr/: CMakeLists.txt  GLSLShader.cpp  GLSLShader.h  main.cpp
SDK/example01_openglOpenxr/shaders/: simple.fragment.glsl  simple.vertex.glsl
SDK/lib/: openxr_loader.lib
SDK/lib/DemandLoading/: CMakeLists.txt  DemandLoaderImpl.cpp  DemandLoaderImpl.h  PagingSystem.cpp  PagingSystem.h  RequestProcessor.h  RequestQueue.cpp  RequestQueue.h
SDK/lib/DemandLoading/Memory/: AsyncItemPool.h  PinnedMemoryManager.h
SDK/lib/DemandLoading/Textures/: BaseColorRequestHandler.cpp  DemandTextureImpl.cpp  DemandTextureImpl.h  DenseTexture.cpp  DenseTexture.h  SamplerRequestHandler.cpp  SparseTexture.cpp  SparseTexture.h  TextureRequestHandler.cpp
SDK/lib/DemandLoading/Util/: TraceFile.cpp  TraceFile.h
SDK/lib/DemandLoading/include/DemandLoading/: DemandLoader.h  DeviceContext.h  Options.h  Statistics.h  Texture2D.h  Texture2DExtended.h
SDK/lib/ImageReader/: CMakeLists.txt  CheckerBoardImage.cpp  EXRReader.cpp  Exception.h  ImageReader.cpp  Stopwatch.h  TextureInfo.cpp
SDK/lib/ImageReader/include/ImageReader/: CheckerBoardImage.h  EXRReader.h  ImageReader.h  MultiCheckerImage.h  TextureInfo.h
SDK/optixHello/: CMakeLists.txt  draw_solid_color.cu  optixHello.cpp  optixHello.h
SDK/optixMeshViewer/: CMakeLists.txt  optixMeshViewer.cpp
SDK/optixPathTracer/: CMakeLists.txt  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h
SDK/optixRaycasting/: CMakeLists.txt  optixRaycasting.cpp  optixRaycasting.cu  optixRaycasting.h  optixRaycastingKernels.cu  optixRaycastingKernels.h
SDK/optixWhitted/: CMakeLists.txt  camera.cu  geometry.cu  helpers.h  optixWhitted.cpp  optixWhitted.h  shading.cu
SDK/support/: tiny_obj_loader.h
SDK/support/gdt/: CMakeLists.txt
SDK/support/gdt/cmake/: FindOptiX.cmake  FindTBB.cmake  configure_build_type.cmake  configure_glut.cmake  configure_optix.cmake  configure_tbb.cmake
SDK/support/gdt/gdt/: gdt.cpp  gdt.h
SDK/support/gdt/gdt/math/: AffineSpace.h  LinearSpace.h  Quaternion.h  box.h  constants.h  fixedpoint.h  vec.h
SDK/support/gdt/gdt/math/vec/: compare.h  functors.h  rotate.h
SDK/support/gdt/gdt/random/: random.h
SDK/support/glfWindow/: CMakeLists.txt  GLFWindow.cpp  GLFWindow.h
SDK/support/openxr/: openxr.hpp
SDK/sutil/: CUDAOutputBuffer.h  Exception.h  Record.h  Scene.cpp  Scene.h  sutil.cpp  sutil.h  sutilapi.h
include/: optix.h  optix_7_device.h  optix_7_host.h  optix_7_types.h  optix_denoiser_tiling.h  optix_function_table.h
include/internal/: optix_7_device_impl.h  optix_7_device_impl_exception.h
